--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-constants": "~10.1.3",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.5.4",
     "formik": "^2.2.9",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
