--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-constants": "~10.1.3",
+    "expo-image-picker": "^10.2.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
     "formik": "^2.2.9",
@@ -24,11 +25,15 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.27.1",
+    "react-native-pager-view": "5.0.12",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-tab-view": "^3.0.1",
     "react-native-web": "^0.17.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "expo-location": "~12.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
