--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -16,6 +18,7 @@
     "expo": "~41.0.1",
     "expo-constants": "~10.1.3",
     "expo-image-picker": "^10.2.2",
+    "expo-location": "~12.0.4",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
     "formik": "^2.2.9",
@@ -32,8 +35,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-tab-view": "^3.0.1",
     "react-native-web": "^0.17.0",
-    "styled-components": "^5.3.0",
-    "expo-location": "~12.0.4"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
