--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-tab-view": "^3.0.1",
     "react-native-web": "^0.17.0",
+    "react-navigation": "^4.4.4",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
